--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@
   margin: 0 auto;
   width: 100%;
   max-width: 800px;
-  height: 90vh;
 }
 
 .App-logo {
@@ -48,14 +47,13 @@
 .team-container{
   display: flex;
   flex-wrap: wrap;
-  height: 90%;
 }
 
 .team-card{
   border: 1px solid black;
   border-radius: 12px;
   width: 31%;
-  height: 45%;
+  height: 350px;
   margin: 1%;
   text-align: left;
   padding: 1%;
